feat: implement patrimoine CRUD
